--- a/src/output.css
+++ b/src/output.css
@@ -687,9 +687,14 @@ video {
   color: hsl(35 77% 62% / var(--tw-text-opacity));
 }
 
-.text-green-600{
+.text-green-900{
   --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
+  color: rgb(20 83 45 / var(--tw-text-opacity));
+}
+
+.text-red-900{
+  --tw-text-opacity: 1;
+  color: rgb(127 29 29 / var(--tw-text-opacity));
 }
 
 .text-opacity-20{
